# ABLE

./: .SUBMISSION_CHECKLIST.md  .dev_guidelines.md  .env.example  .gitignore  00_INDEX.md  01_IMPLEMENTATION.md  02_IMPROVEMENTS.md  03_MIGRATION.md  04_EXPERIMENTS.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  ARVO2.0_GUIDE.md  ARVO_EVOLUTION.md  BUILD_COMMAND_GUIDE.md  BUILD_GUIDE_COMPARISON.md  BUILD_VERIFICATION_COMPARISON.md  CHANGELOG.md  CHANGES.md  DOCUMENTATION_INDEX.md  DOCUMENT_MAP.md  ERROR_PARSER_ANALYSIS.md  EXECUTION_FLOW_ARVO2.0.md  EXECUTION_FLOW_CHANGES.md  EXPERIMENT_RESULTS.md  FILE_READING_STRATEGY.md  FINAL_COMPREHENSIVE_REPORT.md  IMAGEMAGICK_COMPLETE_ANALYSIS.md  IMAGEMAGICK_FINAL_ANALYSIS.md  IMAGEMAGICK_ISSUE_COMPARISON.md  IMAGEMAGICK_LATEST_LOG_ANALYSIS.md  IMAGEMAGICK_LOG_ANALYSIS.md  IMAGEMAGICK_SUCCESS_ANALYSIS.md  IMAGEMAGICK_SUCCESS_COMPARISON.md  IMPROVED_PROMPT_CLEAN.md  LOCAL_REPO_USAGE.md  LOG_ANALYSIS_SUMMARY.md  MIGRATION_PYTHON_TO_C.md  Makefile  PATH_FLOW_ANALYSIS.md  PROMPT_IMPROVEMENT_PROPOSAL.md  (+28 more)
_dev_docs/: .dev_guidelines.md  CHANGES.md  DOCUMENT_MAP.md  FEEDBACK_REQUESTS.md  RELEASE_NOTES_v2.2.md  V2.2_COMMIT_SUMMARY.md
build_agent/: __init__.py  cli.py  config.py  exceptions.py  exit_codes.py  main.py
docs/: README.md
scripts/: test_random_5.sh
tests/: README.md
v2.1/: 00_INDEX.md  03_MIGRATION.md
v2.2/: 00_INDEX.md  01_PIPELINE_ANALYSIS.md  02_IMPROVEMENTS.md  03_VERIFICATION.md  04_TECHNICAL_DETAILS.md  05_SANDBOX_REFACTOR.md  README.md
v2.3/: 00_INDEX.md  01_ROLLBACK_STRATEGY.md  02_COMMAND_FILTERING.md  03_REPOSITORY_REUSE.md  04_DOCKERFILE_IMPROVEMENTS.md  BATCH_EXECUTION_ANALYSIS.md  BATCH_EXECUTION_SUMMARY.md  FLOAT16_LOOP_FIX.md  PATH_FLOW_DETAILED.md  README.md
v2.4/: COMPREHENSIVE_SUMMARY.md  CRITICAL_FINDING.md  FAILURE_ANALYSIS.md  FINAL_REPORT.md  PROMPT_CONTRADICTION_ANALYSIS.md  PROMPT_REVIEW_V2.md  README.md  ROOT_CAUSE_ANALYSIS.md  TEST_RESULTS.md  TEST_RESULTS_INTERIM.md
v2.5/: FILE_CHANGES.md  FINAL_RESULTS.md  FINAL_VERSION.md  FUNDAMENTAL_PROBLEM.md  IMPROVEMENTS_v2.5.1-v2.5.2.md  IMPROVEMENT_SUMMARY.md  LLM_SIMULATION.md  RESULTS_ANALYSIS.md  SKIA_ANALYSIS.md  SMART_OUTPUT_FILTERING.md  SOLUTION.md
v2.5.1/: IMPROVEMENTS.md  STATUS.md
v2.5.2/: CRITICAL_FIX.md  STATUS.md
v2.5_test/: ROOT_CAUSE_FOUND.md  (+1 more)
(+293 files in other folders)
